# RLM-Translate

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test-en.md  test-zh.md
config/: models.yaml  settings.yaml
data/: 00_目录.md  01_Prologue_Holden.md  02_Chapter_One_Elvi.md  03_Chapter_Two_Naomi.md  04_Chapter_Three_Alex.md  05_Chapter_Four_Teresa.md  06_Chapter_Five_Elvi.md  07_Chapter_Six_Alex.md  08_Chapter_Seven_Bobbie.md  09_Chapter_Eight_Naomi.md  10_Chapter_Nine_Teresa.md  11_Chapter_Ten_Elvi.md  12_Chapter_Eleven_Alex.md  13_Chapter_Twelve_Bobbie.md  14_Chapter_Thirteen_Naomi.md  15_Chapter_Fourteen_Teresa.md  16_Chapter_Fifteen_Naomi.md  17_Chapter_Sixteen_Elvi.md  18_Chapter_Seventeen_Alex.md  19_Chapter_Eighteen_Naomi.md  20_Chapter_Nineteen_Elvi.md  21_Chapter_Twenty_Teresa.md  22_Chapter_Twenty-One_Elvi.md  23_Chapter_Twenty-Two_Teresa.md  24_Chapter_Twenty-Three_Naomi.md  25_Chapter_Twenty-Four_Bobbie.md  26_Interlude_The_Dancing_Bear.md  27_Chapter_Twenty-Five_Naomi.md  28_Chapter_Twenty-Six_Elvi.md  29_Chapter_Twenty-Seven_Teresa.md  30_Chapter_Twenty-Eight_Naomi.md  31_Chapter_Twenty-Nine_Elvi.md  32_Chapter_Thirty_Bobbie.md  33_Chapter_Thirty-One_Teresa.md  34_Chapter_Thirty-Two_Bobbie.md  35_Chapter_Thirty-Three_Alex.md  36_Chapter_Thirty-Four_Elvi.md  37_Chapter_Thirty-Five_Naomi.md  38_Chapter_Thirty-Six_Teresa.md  39_Chapter_Thirty-Seven_Alex.md  (+15 more)
doc/: prd.md  spec.md
prompts/: analyzer.txt  critic.txt  drafter.txt  editor.txt
scripts/: batch_translate.py  debug_chunker.py  extract_epub.py  run_translation.py  (+4 more)
(+26 files in other folders)
